--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>Nebula Glass Scene</title>
+<title>Nebula Glass Game</title>
 <style>
-* { margin:0; padding:0; box-sizing:border-box; }
-body {
-  height:100vh;
-  overflow:hidden;
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  height:100vh;overflow:hidden;
   background:
     radial-gradient(circle at 20% 30%, #6a1fa0, transparent 40%),
     radial-gradient(circle at 80% 20%, #ff4fd8, transparent 45%),
@@ -15,87 +14,71 @@ body {
     #05010a;
 }
 
-/* Yıldız Parçacıkları */
-.star {
+/* ===== YILDIZ ===== */
+.star{
   position:absolute;
   font-size:48px;
   color:#fff6b0;
   text-shadow:
     0 0 15px #ffd700,
     0 0 30px #ffef9a,
-    0 0 60px rgba(255,215,0,0.8);
-  animation: float 6s linear infinite, pulse 2s ease-in-out infinite;
+    0 0 60px rgba(255,215,0,.8);
 }
 
-@keyframes float {
-  from { transform: translateY(-100px); }
-  to { transform: translateY(110vh); }
-}
-
-@keyframes pulse {
-  0%,100% { opacity:0.7; }
-  50% { opacity:1; }
-}
-
-/* Cam Panel */
-#glassPanel {
+/* ===== CAM PANEL ===== */
+#glassPanel{
   position:absolute;
-  bottom:30px;
+  bottom:110px;
   left:50%;
   transform:translateX(-50%);
-  width:80%;
-  height:140px;
+  width:60%;
+  height:120px;
   border-radius:30px;
-  background:
-    linear-gradient(
-      135deg,
-      rgba(255,150,220,0.35),
-      rgba(255,150,220,0.1)
-    );
-  backdrop-filter: blur(20px) saturate(160%);
-  -webkit-backdrop-filter: blur(20px) saturate(160%);
-  border:1px solid rgba(255,180,230,0.6);
+  background:linear-gradient(
+    135deg,
+    rgba(255,150,220,.35),
+    rgba(255,150,220,.1)
+  );
+  backdrop-filter:blur(20px) saturate(160%);
+  border:1px solid rgba(255,180,230,.6);
   box-shadow:
-    inset 0 0 30px rgba(255,180,230,0.4),
-    0 0 40px rgba(255,100,200,0.4);
+    inset 0 0 30px rgba(255,180,230,.4),
+    0 0 40px rgba(255,100,200,.4);
 }
 
-/* Cam Parlama */
-#glassPanel::before {
-  content:"";
+/* ===== HARF KUTULARI ===== */
+#letterBoxes{
   position:absolute;
-  inset:0;
-  border-radius:30px;
-  background:
-    linear-gradient(
-      120deg,
-      rgba(255,255,255,0.35),
-      transparent 60%
-    );
-  opacity:0.5;
-  pointer-events:none;
+  bottom:20px;
+  left:50%;
+  transform:translateX(-50%);
+  display:flex;
+  gap:14px;
 }
 
-/* Objeler (Büyük!) */
-.object {
+.box{
+  width:70px;height:70px;
+  border-radius:18px;
+  background:rgba(255,150,220,.18);
+  backdrop-filter:blur(12px);
+  border:1px solid rgba(255,180,230,.5);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:34px;
+  color:white;
+  text-shadow:0 0 15px gold;
+}
+
+/* ===== HARF ===== */
+.letter{
   position:absolute;
   top:-80px;
-  font-size:64px;
-  text-shadow:0 0 25px currentColor;
-}
-
-.letter {
-  color:#ffffff;
+  font-size:56px;
+  color:white;
   text-shadow:
-    0 0 20px #ffd700,
-    0 0 40px rgba(255,215,0,0.8);
-}
-
-.meteor {
-  color:#ff3b3b;
-  text-shadow:
-    0 0 25px #ff0000,
-    0 0 60px orange;
+    0 0 20px gold,
+    0 0 40px rgba(255,215,0,.8);
 }
 </style>
 </head>
@@ -104,44 +87,85 @@ body {
 
 <div id="glassPanel"></div>
 
+<div id="letterBoxes"></div>
+
 <script>
-// Parlayan yıldızlar
-function spawnStar() {
-  const s = document.createElement("div");
-  s.className = "star";
-  s.textContent = "⭐";
-  s.style.left = Math.random() * window.innerWidth + "px";
-  s.style.animationDuration = (4 + Math.random()*3) + "s";
+/* ===== PANEL HAREKET ===== */
+const panel=document.getElementById("glassPanel");
+let targetX=innerWidth/2, currentX=targetX;
+document.addEventListener("mousemove",e=>targetX=e.clientX);
+document.addEventListener("touchmove",e=>targetX=e.touches[0].clientX);
+
+(function move(){
+  currentX+=(targetX-currentX)*.15;
+  panel.style.left=currentX+"px";
+  requestAnimationFrame(move);
+})();
+
+/* ===== HARF KUTULARI ===== */
+const letters=["Y","I","L","D","I","Z"];
+const boxWrap=document.getElementById("letterBoxes");
+const activeLetters=[...letters];
+
+letters.forEach(l=>{
+  const b=document.createElement("div");
+  b.className="box";
+  b.dataset.letter=l;
+  boxWrap.appendChild(b);
+});
+
+/* ===== YILDIZ ===== */
+function spawnStar(){
+  const s=document.createElement("div");
+  s.className="star";
+  s.textContent="⭐";
+  s.style.left=Math.random()*innerWidth+"px";
   document.body.appendChild(s);
-  setTimeout(() => s.remove(), 7000);
-}
-setInterval(spawnStar, 600);
 
-// Demo objeler
-function spawnObject(type) {
-  const o = document.createElement("div");
-  o.className = "object " + type;
-  o.textContent = type === "letter" ? "Y" : "☄️";
-  o.style.left = Math.random() * (window.innerWidth - 80) + "px";
-  document.body.appendChild(o);
+  let y=-60, speed=2+Math.random()*2;
+  const fall=setInterval(()=>{
+    y+=speed;
+    s.style.top=y+"px";
 
-  let y = -80;
-  let speed = 2 + Math.random()*2;
-
-  const fall = setInterval(() => {
-    y += speed;
-    o.style.top = y + "px";
-
-    if (y > window.innerHeight - 180) {
-      o.style.opacity = 0;
-      clearInterval(fall);
-      setTimeout(() => o.remove(), 300);
+    const p=panel.getBoundingClientRect();
+    const r=s.getBoundingClientRect();
+    if(r.bottom>p.top && r.left>p.left && r.right<p.right){
+      s.remove(); clearInterval(fall);
     }
-  }, 16);
+    if(y>innerHeight){s.remove();clearInterval(fall);}
+  },16);
 }
 
-setInterval(() => spawnObject("letter"), 1800);
-setInterval(() => spawnObject("meteor"), 3500);
+/* ===== HARF ===== */
+function spawnLetter(){
+  if(!activeLetters.length) return;
+  const l=activeLetters[Math.floor(Math.random()*activeLetters.length)];
+  const el=document.createElement("div");
+  el.className="letter";
+  el.textContent=l;
+  el.style.left=Math.random()*(innerWidth-60)+"px";
+  document.body.appendChild(el);
+
+  let y=-80;
+  const fall=setInterval(()=>{
+    y+=2;
+    el.style.top=y+"px";
+
+    if(y>innerHeight-90){
+      const box=[...document.querySelectorAll(".box")]
+        .find(b=>b.dataset.letter===l && !b.textContent);
+      if(box){
+        box.textContent=l;
+        activeLetters.splice(activeLetters.indexOf(l),1);
+      }
+      el.remove(); clearInterval(fall);
+    }
+  },16);
+}
+
+/* ===== ZAMANLAMA (UZUN OYUN) ===== */
+setInterval(spawnStar,700);
+setInterval(spawnLetter,2600);
 </script>
 
 </body>
