--- a/index.html
+++ b/index.html
@@ -12,161 +12,229 @@ body{
     radial-gradient(circle at 80% 20%, #ff4fd8, transparent 45%),
     radial-gradient(circle at 50% 80%, #1b0a3d, transparent 50%),
     #05010a;
+  font-family:Arial, sans-serif;
 }
 
-/* ===== YILDIZ ===== */
-.star{
-  position:absolute;
-  font-size:48px;
-  color:#fff6b0;
-  text-shadow:
-    0 0 15px #ffd700,
-    0 0 30px #ffef9a,
-    0 0 60px rgba(255,215,0,.8);
+/* UI */
+#score{
+  position:absolute;top:10px;left:10px;
+  color:white;font-size:16px;
+  text-shadow:0 0 10px gold;
+}
+#lives{
+  position:absolute;top:30px;left:10px;
+  color:pink;font-size:16px;
 }
 
-/* ===== CAM PANEL ===== */
+/* Glass Panel */
 #glassPanel{
   position:absolute;
   bottom:110px;
   left:50%;
   transform:translateX(-50%);
-  width:60%;
-  height:120px;
+  width:50%;
+  height:100px;
   border-radius:30px;
-  background:linear-gradient(
-    135deg,
+  background:linear-gradient(135deg,
     rgba(255,150,220,.35),
-    rgba(255,150,220,.1)
-  );
-  backdrop-filter:blur(20px) saturate(160%);
+    rgba(255,150,220,.1));
+  backdrop-filter:blur(20px);
   border:1px solid rgba(255,180,230,.6);
   box-shadow:
     inset 0 0 30px rgba(255,180,230,.4),
     0 0 40px rgba(255,100,200,.4);
 }
 
-/* ===== HARF KUTULARI ===== */
+/* Letter boxes */
 #letterBoxes{
   position:absolute;
   bottom:20px;
   left:50%;
   transform:translateX(-50%);
-  display:flex;
-  gap:14px;
+  display:flex;gap:14px;
+}
+.box{
+  width:60px;height:60px;
+  border-radius:16px;
+  background:rgba(255,150,220,.18);
+  backdrop-filter:blur(10px);
+  border:1px solid rgba(255,180,230,.5);
+  display:flex;align-items:center;justify-content:center;
+  font-size:28px;color:white;
 }
 
-.box{
-  width:70px;height:70px;
-  border-radius:18px;
-  background:rgba(255,150,220,.18);
-  backdrop-filter:blur(12px);
-  border:1px solid rgba(255,180,230,.5);
-  display:flex;
+/* Objects */
+.star, .meteor, .heart, .letter{
+  position:absolute;top:-80px;
+}
+.star{
+  font-size:40px;
+  text-shadow:0 0 20px gold,0 0 40px gold;
+}
+.letter{
+  font-size:46px;
+  text-shadow:0 0 20px gold;
+}
+.meteor{
+  font-size:48px;
+  filter:drop-shadow(0 0 20px orange);
+}
+.heart{
+  font-size:34px;
+}
+
+/* Game over */
+#overlay{
+  position:fixed;inset:0;
+  background:rgba(0,0,0,.65);
+  display:none;
   align-items:center;
   justify-content:center;
-  font-size:34px;
+  flex-direction:column;
   color:white;
-  text-shadow:0 0 15px gold;
 }
-
-/* ===== HARF ===== */
-.letter{
-  position:absolute;
-  top:-80px;
-  font-size:56px;
-  color:white;
-  text-shadow:
-    0 0 20px gold,
-    0 0 40px rgba(255,215,0,.8);
+#overlay button{
+  margin-top:20px;
+  padding:10px 20px;
+  font-size:16px;
 }
 </style>
 </head>
 
 <body>
 
-<div id="glassPanel"></div>
+<div id="score">Skor: 0</div>
+<div id="lives">❤️❤️❤️</div>
 
+<div id="glassPanel"></div>
 <div id="letterBoxes"></div>
 
-<script>
-/* ===== PANEL HAREKET ===== */
-const panel=document.getElementById("glassPanel");
-let targetX=innerWidth/2, currentX=targetX;
-document.addEventListener("mousemove",e=>targetX=e.clientX);
-document.addEventListener("touchmove",e=>targetX=e.touches[0].clientX);
+<div id="overlay">
+  <h2>Oyun Bitti</h2>
+  <button onclick="location.reload()">Tekrar Oyna</button>
+</div>
 
+<script>
+/* ===== Panel movement ===== */
+const panel=document.getElementById("glassPanel");
+let tx=innerWidth/2,cx=tx;
+document.addEventListener("mousemove",e=>tx=e.clientX);
+document.addEventListener("touchmove",e=>tx=e.touches[0].clientX);
 (function move(){
-  currentX+=(targetX-currentX)*.15;
-  panel.style.left=currentX+"px";
+  cx+=(tx-cx)*.25;
+  panel.style.left=cx+"px";
   requestAnimationFrame(move);
 })();
 
-/* ===== HARF KUTULARI ===== */
-const letters=["Y","I","L","D","I","Z"];
-const boxWrap=document.getElementById("letterBoxes");
-const activeLetters=[...letters];
+/* ===== Game state ===== */
+let score=0,lives=3,gameOver=false;
+const scoreEl=document.getElementById("score");
+const livesEl=document.getElementById("lives");
+const overlay=document.getElementById("overlay");
 
+/* ===== Letters ===== */
+const letters=["Y","I","L","D","I","Z"];
+const active=[...letters];
+const boxWrap=document.getElementById("letterBoxes");
 letters.forEach(l=>{
   const b=document.createElement("div");
-  b.className="box";
-  b.dataset.letter=l;
+  b.className="box";b.dataset.l=l;
   boxWrap.appendChild(b);
 });
 
-/* ===== YILDIZ ===== */
+/* ===== Helpers ===== */
+function hit(a,b){
+  const r1=a.getBoundingClientRect();
+  const r2=b.getBoundingClientRect();
+  return !(r1.right<r2.left||r1.left>r2.right||r1.bottom<r2.top||r1.top>r2.bottom);
+}
+function updateUI(){
+  scoreEl.textContent="Skor: "+score;
+  livesEl.textContent="❤️".repeat(lives);
+}
+
+/* ===== Spawn functions ===== */
 function spawnStar(){
+  if(gameOver) return;
   const s=document.createElement("div");
-  s.className="star";
-  s.textContent="⭐";
+  s.className="star";s.textContent="⭐";
   s.style.left=Math.random()*innerWidth+"px";
   document.body.appendChild(s);
-
-  let y=-60, speed=2+Math.random()*2;
+  let y=-60;
   const fall=setInterval(()=>{
-    y+=speed;
-    s.style.top=y+"px";
-
-    const p=panel.getBoundingClientRect();
-    const r=s.getBoundingClientRect();
-    if(r.bottom>p.top && r.left>p.left && r.right<p.right){
-      s.remove(); clearInterval(fall);
+    y+=3;s.style.top=y+"px";
+    if(hit(s,panel)){
+      score+=10;updateUI();
+      s.remove();clearInterval(fall);
     }
     if(y>innerHeight){s.remove();clearInterval(fall);}
   },16);
 }
 
-/* ===== HARF ===== */
-function spawnLetter(){
-  if(!activeLetters.length) return;
-  const l=activeLetters[Math.floor(Math.random()*activeLetters.length)];
-  const el=document.createElement("div");
-  el.className="letter";
-  el.textContent=l;
-  el.style.left=Math.random()*(innerWidth-60)+"px";
-  document.body.appendChild(el);
-
+function spawnMeteor(){
+  if(gameOver) return;
+  const m=document.createElement("div");
+  m.className="meteor";m.textContent="☄️";
+  m.style.left=Math.random()*innerWidth+"px";
+  document.body.appendChild(m);
   let y=-80;
   const fall=setInterval(()=>{
-    y+=2;
-    el.style.top=y+"px";
-
-    if(y>innerHeight-90){
-      const box=[...document.querySelectorAll(".box")]
-        .find(b=>b.dataset.letter===l && !b.textContent);
-      if(box){
-        box.textContent=l;
-        activeLetters.splice(activeLetters.indexOf(l),1);
+    y+=4;m.style.top=y+"px";
+    if(hit(m,panel)){
+      lives--;updateUI();
+      m.remove();clearInterval(fall);
+      if(lives<=0){
+        gameOver=true;
+        overlay.style.display="flex";
       }
-      el.remove(); clearInterval(fall);
     }
+    if(y>innerHeight){m.remove();clearInterval(fall);}
   },16);
 }
 
-/* ===== ZAMANLAMA (UZUN OYUN) ===== */
-setInterval(spawnStar,700);
-setInterval(spawnLetter,2600);
-</script>
+function spawnHeart(){
+  if(gameOver||lives>=3) return;
+  const h=document.createElement("div");
+  h.className="heart";h.textContent="❤️";
+  h.style.left=Math.random()*innerWidth+"px";
+  document.body.appendChild(h);
+  let y=-60;
+  const fall=setInterval(()=>{
+    y+=2;h.style.top=y+"px";
+    if(hit(h,panel)){
+      lives++;updateUI();
+      h.remove();clearInterval(fall);
+    }
+    if(y>innerHeight){h.remove();clearInterval(fall);}
+  },16);
+}
 
+function spawnLetter(){
+  if(gameOver||!active.length) return;
+  const l=active.shift();
+  const el=document.createElement("div");
+  el.className="letter";el.textContent=l;
+  el.style.left=Math.random()*(innerWidth-60)+"px";
+  document.body.appendChild(el);
+  let y=-80;
+  const fall=setInterval(()=>{
+    y+=2;el.style.top=y+"px";
+    const box=[...document.querySelectorAll(".box")]
+      .find(b=>b.dataset.l===l);
+    if(hit(el,box)){
+      box.textContent=l;
+      el.remove();clearInterval(fall);
+    }
+    if(y>innerHeight){el.remove();clearInterval(fall);}
+  },16);
+}
+
+/* ===== Timers ===== */
+setInterval(spawnStar,600);
+setInterval(spawnMeteor,1200);
+setInterval(spawnHeart,8000);
+setInterval(spawnLetter,3500);
+
+</script>
 </body>
 </html>
